build-debug.log
To honour the JVM settings for this build a single-use Daemon process will be forked. For more on this, please refer to https://docs.gradle.org/8.7/userguide/gradle_daemon.html#sec:disabling_the_daemon in the Gradle documentation.
Daemon will be stopped at the end of the build 

> Configure project :
WARNING: The option setting 'android.aapt2FromMavenOverride=/data/data/com.termux/files/home/git/Unexpected-Keyboard/tools/aapt2-arm64/aapt2' is experimental.

> Task :copyLayoutDefinitions UP-TO-DATE
> Task :copyRawQwertyUS UP-TO-DATE

> Task :generateVersionInfo
Generated version info:  ()

> Task :initDebugKeystore UP-TO-DATE
> Task :preBuild
> Task :preDebugBuild
> Task :mergeDebugNativeDebugMetadata NO-SOURCE
> Task :javaPreCompileDebug FROM-CACHE
> Task :generateDebugResValues FROM-CACHE
> Task :checkDebugAarMetadata
> Task :mapDebugSourceSetPaths
> Task :generateDebugResources
> Task :packageDebugResources
> Task :mergeDebugResources
> Task :createDebugCompatibleScreenManifests
> Task :extractDeepLinksDebug FROM-CACHE
> Task :processDebugMainManifest FROM-CACHE
> Task :processDebugManifest FROM-CACHE
> Task :processDebugManifestForPackage FROM-CACHE
> Task :mergeDebugShaders
> Task :compileDebugShaders NO-SOURCE
> Task :generateDebugAssets UP-TO-DATE
> Task :mergeDebugAssets
> Task :compressDebugAssets FROM-CACHE
> Task :processDebugJavaRes NO-SOURCE
> Task :parseDebugLocalResources
> Task :checkDebugDuplicateClasses
> Task :desugarDebugFileDependencies FROM-CACHE
> Task :mergeExtDexDebug FROM-CACHE
> Task :mergeLibDexDebug FROM-CACHE
> Task :mergeDebugJniLibFolders
> Task :mergeDebugNativeLibs NO-SOURCE
> Task :stripDebugDebugSymbols NO-SOURCE
> Task :validateSigningDebug
> Task :writeDebugAppMetadata
> Task :writeDebugSigningConfigVersions
> Task :mergeDebugJavaResource
> Task :processDebugResources

> Task :compileDebugJavaWithJavac
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:404: error: cannot find symbol
    liveControlLayout.addView(zoneLabel);
    ^
  symbol:   variable liveControlLayout
  location: class SwipeCalibrationActivity
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:424: error: cannot find symbol
    liveControlLayout.addView(zoneSlider);
    ^
  symbol:   variable liveControlLayout
  location: class SwipeCalibrationActivity
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:431: error: cannot find symbol
    liveControlLayout.addView(missingLabel);
    ^
  symbol:   variable liveControlLayout
  location: class SwipeCalibrationActivity
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:451: error: cannot find symbol
    liveControlLayout.addView(missingSlider);
    ^
  symbol:   variable liveControlLayout
  location: class SwipeCalibrationActivity
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:458: error: cannot find symbol
    liveControlLayout.addView(startLabel);
    ^
  symbol:   variable liveControlLayout
  location: class SwipeCalibrationActivity
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:478: error: cannot find symbol
    liveControlLayout.addView(startSlider);
    ^
  symbol:   variable liveControlLayout
  location: class SwipeCalibrationActivity
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:480: error: cannot find symbol
    topLayout.addView(liveControlLayout);
                      ^
  symbol:   variable liveControlLayout
  location: class SwipeCalibrationActivity
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:2554: error: cannot find symbol
      for (int i = 0; i < userSwipe.size(); i++) timestamps.add((long)i * 50); // Simulate for now
                          ^
  symbol:   variable userSwipe
  location: class SwipeCalibrationActivity
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:2557: error: cannot find symbol
        traceAnalyzer.analyzeTrace(userSwipe, timestamps, word);
                                   ^
  symbol:   variable userSwipe
  location: class SwipeCalibrationActivity
/data/data/com.termux/files/home/git/Unexpected-Keyboard/srcs/juloo.keyboard2/SwipeCalibrationActivity.java:2603: error: cannot find symbol
        KeyboardSwipeRecognizer.RecognitionResult score = debugRecognizer.getDetailedScore(candidate, userSwipe, traceResult.detectedLetters);
                                                                                                      ^
  symbol:   variable userSwipe
  location: class SwipeCalibrationActivity
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors

> Task :compileDebugJavaWithJavac FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileDebugJavaWithJavac'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 28s
28 actionable tasks: 18 executed, 10 from cache
